middle-wooder -- ok

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./blocks/1.header/css/_header.css">
+    <link rel="stylesheet" href="./blocks/2.main_section-wooder/css/_wooder.css">
     <script type="text/javascript" src="./js/script.js"></script>
     <title>Wooder</title>
 </head>
@@ -32,5 +33,40 @@
         </div>
         <div class="choose-lang">EN</div>
     </header>
+    <main>
+        <section class="label-wooder">
+            <div class="left-slider">
+                <div></div>
+                <div>01</div>    
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <div class="middle">
+                WOODER
+                <div class="learn-more">
+                    <div>LEARN MORE</div>
+                    <svg width="30" height="19" xmlns="http://www.w3.org/2000/svg">
+                        <path fill="#ffffff" stroke="#ffffff" stroke-width="2" d="M0,9.076922476820677L28.038461036098415,9.076922476820677"/>
+                        <path fill="#ffffff" stroke="#ffffff" stroke-width="2" d="M27.653845637375426,9.076922476820677L23.0384608526995,4.461537692144752"/>
+                        <path fill="#ffffff" stroke="#ffffff" stroke-width="2" d="M27.269230238652412,9.461537875543662L23.0384608526995,13.307691862773602"/>
+                    </svg>
+                </div>
+                <div class="scroll-down">
+                    <img src="./blocks/2.main_section-wooder/img/mouse.png" alt="pic for that theme">
+                    <svg width="30" height="19" xmlns="http://www.w3.org/2000/svg">
+                        <path fill="#ffffff" stroke="#ffffff" stroke-width="2" d="M0,9.076922476820677L28.038461036098415,9.076922476820677"/>
+                        <path fill="#ffffff" stroke="#ffffff" stroke-width="2" d="M27.653845637375426,9.076922476820677L23.0384608526995,4.461537692144752"/>
+                        <path fill="#ffffff" stroke="#ffffff" stroke-width="2" d="M27.269230238652412,9.461537875543662L23.0384608526995,13.307691862773602"/>
+                    </svg>
+                    <div class="text">SCROLL</div>
+                </div>
+            </div>
+            <div>
+
+            </div>
+        </section>
+    </main>
 </body>
 </html>
