--- a/index.html
+++ b/index.html
@@ -9,64 +9,160 @@
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./blocks/1.header/css/_header.css">
     <link rel="stylesheet" href="./blocks/2.main_section-wooder/css/_wooder.css">
-    <script type="text/javascript" src="./js/script.js"></script>
+    <link rel="stylesheet" href="./blocks/3.main_section-decor/css/decor.css">
+    <link rel="stylesheet" href="./blocks/4.main_section-about/css/_about.css">
+    <link rel="stylesheet" href="./blocks/5.footer/css/_footer.css">
+    <link rel="stylesheet" href="./blocks/6.main_section-videos/css/_videos.css">
+    <link href="./index_ru.html">
     <title>Wooder</title>
 </head>
 <body>
     <header>
-        <div class="menu-button">
-            <div></div>
-            <div></div>
-            <div></div>
+        <a name="item-1"></a>
+        <div class="left-container">
+            <div class="menu-button">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+            <a class="menu" href="">menu</a>
         </div>
-        <div class="menu">MENU</div>
-        <div class="main-name">WOODER<div></div></div>
-        <nav>
-            <ul>
-                <li>HOME</li>
-                <li>PRODUCTS</li>
-                <li>ABOUT</li>
+        <div class="middle-container">
+            <div class="main-name"><a>wooder</a><div></div></div>
+            <nav>
+                <ul>
+                    <li><a>home</a></li>
+                    <li><a>products</a></li>
+                    <li><a>about</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="right-container">
+            <div class="info">
+                <a href=""><img src="./blocks/1.header/img/info.png" alt="info-label"></a>
+            </div>
+            <ul class="choose-lang">
+                <li><a href="./index.html">en</a></li>
+<!--                <li><a href="./index_ru.html">ru</a></li>-->
             </ul>
-        </nav>
-        <div class="info">
-            <img src="./blocks/1.header/img/info.png" alt="info-label">
         </div>
-        <div class="choose-lang">EN</div>
     </header>
     <main>
         <section class="label-wooder">
             <div class="left-slider">
                 <div></div>
                 <div>01</div>    
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <a href="#item-1"></a>
+                <a href="#item-2"></a>
+                <a href=""></a>
+                <a href="#item-4"></a>
             </div>
             <div class="middle">
-                WOODER
-                <div class="learn-more">
-                    <div>LEARN MORE</div>
+                <span>wooder</span>
+                <a class="learn-more" href="">
+                    <div>learn more</div>
                     <svg width="30" height="19" xmlns="http://www.w3.org/2000/svg">
-                        <path fill="#ffffff" stroke="#ffffff" stroke-width="2" d="M0,9.076922476820677L28.038461036098415,9.076922476820677"/>
-                        <path fill="#ffffff" stroke="#ffffff" stroke-width="2" d="M27.653845637375426,9.076922476820677L23.0384608526995,4.461537692144752"/>
-                        <path fill="#ffffff" stroke="#ffffff" stroke-width="2" d="M27.269230238652412,9.461537875543662L23.0384608526995,13.307691862773602"/>
+                        <path stroke-width="2" d="M0,9.076922476820677L28.038461036098415,9.076922476820677"/>
+                        <path stroke-width="2" d="M27.653845637375426,9.076922476820677L23.0384608526995,4.461537692144752"/>
+                        <path stroke-width="2" d="M27.269230238652412,9.461537875543662L23.0384608526995,13.307691862773602"/>
                     </svg>
-                </div>
-                <div class="scroll-down">
+                </a>
+                <a class="scroll-down" href="">
                     <img src="./blocks/2.main_section-wooder/img/mouse.png" alt="pic for that theme">
                     <svg width="30" height="19" xmlns="http://www.w3.org/2000/svg">
-                        <path fill="#ffffff" stroke="#ffffff" stroke-width="2" d="M0,9.076922476820677L28.038461036098415,9.076922476820677"/>
-                        <path fill="#ffffff" stroke="#ffffff" stroke-width="2" d="M27.653845637375426,9.076922476820677L23.0384608526995,4.461537692144752"/>
-                        <path fill="#ffffff" stroke="#ffffff" stroke-width="2" d="M27.269230238652412,9.461537875543662L23.0384608526995,13.307691862773602"/>
+                        <path stroke-width="2" d="M0,9.076922476820677L28.038461036098415,9.076922476820677"/>
+                        <path stroke-width="2" d="M27.653845637375426,9.076922476820677L23.0384608526995,4.461537692144752"/>
+                        <path stroke-width="2" d="M27.269230238652412,9.461537875543662L23.0384608526995,13.307691862773602"/>
                     </svg>
-                    <div class="text">SCROLL</div>
-                </div>
+                </a>
             </div>
-            <div>
-
+            <div class="label-decor">
+              <p>furniture & decor</p>
+            </div>
+        </section>
+        <section class="main-content">
+            <div class="content-item content-item-1">
+                <a name="item-2"></a>
+                <div class="item-text">
+                   <div class="item-text-title">
+                    <h3>Furniture</h3>
+                   </div>
+                   <div class="item-text-p">
+                    <p>Wooder utilizes materials otherwise left behind, rendered useless in their original intent. By creating new pieces made of reclaimed barnwood</p>
+                   </div>
+                    <a href="">Learn more
+                    <svg width="30" height="19" xmlns="http://www.w3.org/2000/svg">
+                        <path stroke-width="2" stroke="#bea67c" d="M0,9.076922476820677L28.038461036098415,9.076922476820677"/>
+                        <path stroke-width="2" stroke="#bea67c" d="M27.653845637375426,9.076922476820677L23.0384608526995,4.461537692144752"/>
+                        <path stroke-width="2" stroke="#bea67c" d="M27.269230238652412,9.461537875543662L23.0384608526995,13.307691862773602"/>
+                    </svg>
+                    </a>
+                </div>
+                <img src="./blocks/3.main_section-decor/img/furniture.png" alt="Картинка привязанная к блоку товаров">
+                <div class="content-number content-number-1"><p>01</p> <div></div></div>
+            </div>
+            <div class="content-item content-item-2">
+                <img src="./blocks/3.main_section-decor/img/decor.png" alt="Картинка привязанная к блоку товаров">
+                <div class="item-text">
+                   <div class="item-text-title">
+                    <h3>decor</h3>
+                    </div>
+                     <div class="item-text-p">
+                    <p>We make all types of wooden decor as per design given by Architect,Interior designer, contractor which is suitable</p>
+                    </div>
+                    <a href="">Learn more
+                    <svg width="30" height="19" xmlns="http://www.w3.org/2000/svg">
+                        <path stroke-width="2" stroke="#bea67c" d="M0,9.076922476820677L28.038461036098415,9.076922476820677"/>
+                        <path stroke-width="2" stroke="#bea67c" d="M27.653845637375426,9.076922476820677L23.0384608526995,4.461537692144752"/>
+                        <path stroke-width="2" stroke="#bea67c" d="M27.269230238652412,9.461537875543662L23.0384608526995,13.307691862773602"/>
+                    </svg>
+                    </a>  
+                </div>
+                <div class="content-number content-number-2"><p>02</p> <div></div></div>
+            </div>
+            <div class="quality">
+                <p> Wooder — is quality</p>
+            <div></div>
+            <p>We create unique objects made of rare wood, specially under the order.
+                Look at the short video our work.
+            </p>
+            </div>
+        </section>
+        <section class="videos">
+            <div class="image-container">
+                <div class="video-1">
+                    <img src="./blocks/6.main_section-videos/img/1.png" alt="img_1">
+                </div>
+                <div class="video-2">
+                    <img src="./blocks/6.main_section-videos/img/2.png" alt="img_2">
+                </div>
+                <div class="video-3">
+                    <img src="./blocks/6.main_section-videos/img/3.png" alt="img_3">
+                </div>  
             </div>
         </section>
     </main>
+        <section class="about">
+            <a name="item-4"></a>
+            <img src="./blocks/4.main_section-about/img/people.png" alt="people">
+            <div class="text">
+                <p>about us</p>
+                <p>We are team of professionals in the wood pro&shycessing and the
+                    creation of wooden furniture of the highest class
+                </p>
+                <a class="learn-more_down" href="">
+                    <div>learn more</div>
+                    <svg width="30" height="19" xmlns="http://www.w3.org/2000/svg">
+                        <path stroke-width="2" d="M0,9.076922476820677L28.038461036098415,9.076922476820677"/>
+                        <path stroke-width="2" d="M27.653845637375426,9.076922476820677L23.0384608526995,4.461537692144752"/>
+                        <path stroke-width="2" d="M27.269230238652412,9.461537875543662L23.0384608526995,13.307691862773602"/>
+                    </svg>
+                    <div></div>
+                </a>
+            </div>
+        </section>
+    <footer>
+        <div class="main-name"><a>wooder</a><div></div></div>
+    </footer>
 </body>
 </html>
