bg-video + style

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./blocks/4.main_section-about/css/_about.css">
     <link rel="stylesheet" href="./blocks/5.footer/css/_footer.css">
     <link rel="stylesheet" href="./blocks/6.main_section-videos/css/_videos.css">
+    <link rel="stylesheet" href="./blocks/7.main_section-bg-videos/css/bg-videos.css">
     <link href="./index_ru.html">
     <title>Wooder</title>
 </head>
@@ -140,6 +141,20 @@
                     <img src="./blocks/6.main_section-videos/img/3.png" alt="img_3">
                 </div>  
             </div>
+        </section>
+        <section class="bg-video">
+            <div class="bg-video--container">
+             <div class="text-section">
+              <div class="bg-video-title">
+                    <h3>we Do the design of any complexity</h3>
+                    </div>
+                     <div class="bg-video-text">
+                    <p>This is a team of professionals that make the furniture and wood décor high standard. Creating modern designs. Adhering to the global quality standards. And we are doing work with love.</p>
+                    </div>
+                    <button><img src="" alt="">
+                    <p>Watch video</p></button> 
+            </div>
+             </div>
         </section>
     </main>
         <section class="about">
