::before + video.section

--- a/index.html
+++ b/index.html
@@ -151,9 +151,10 @@
                      <div class="bg-video-text">
                     <p>This is a team of professionals that make the furniture and wood décor high standard. Creating modern designs. Adhering to the global quality standards. And we are doing work with love.</p>
                     </div>
-                    <button><img src="" alt="">
+                    <button><img src="./blocks/7.main_section-bg-videos/img/player.png" alt="Кнопка запуска видео">
                     <p>Watch video</p></button> 
             </div>
+            <img class="large-load-player" src="./blocks/7.main_section-bg-videos/img/player6.png" alt="Декоративный элемент">
              </div>
         </section>
     </main>
@@ -161,11 +162,13 @@
             <a name="item-4"></a>
             <img src="./blocks/4.main_section-about/img/people.png" alt="people">
             <div class="text">
-                <p>about us</p>
-                <p>We are team of professionals in the wood pro&shycessing and the
-                    creation of wooden furniture of the highest class
-                </p>
-                <a class="learn-more_down" href="">
+               <div class="about-text-title">
+                   <h3>about us</h3>
+               </div>
+               <div class="about-text-p">
+                <p>We are team of professionals in the wood pro&shycessing and the creation of wooden furniture of the highest class</p>
+               </div>
+                <a class="learn-more_down" href="#">
                     <div>learn more</div>
                     <svg width="30" height="19" xmlns="http://www.w3.org/2000/svg">
                         <path stroke-width="2" d="M0,9.076922476820677L28.038461036098415,9.076922476820677"/>
